--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "serverstart": "DEBUG=blog-api-server:* npm run devstart"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "mongoose": "^6.2.4",
