Set up server to work with new monorepo

--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=blog-api-server:* npm run devstart"
+    "devStart": "nodemon ./bin/www",
+    "serverStart": "DEBUG=blog-api-server:* npm run devStart"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
