--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "blog-api-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
