--- a/client-admin/package.json
+++ b/client-admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-api-client-admin",
+  "name": "client-admin",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://127.0.0.1:8080",
@@ -46,6 +46,5 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
-  },
-  "homepage": "http://yamakenth.github.io/blog-api-client-admin"
+  }
 }
